@@ -1418,6 +1418,8 @@ CREATE TABLE graph_templates_graph (
   scale_log_units char(2) default NULL,
   t_auto_scale_rigid char(2) default '0',
   auto_scale_rigid char(2) default NULL,
+  t_alt_y_grid char(2) default '0',
+  alt_y_grid char(2) default NULL,
   t_auto_padding char(2) default '0',
   auto_padding char(2) default NULL,
   t_base_value char(2) default '0',
@@ -1440,43 +1442,43 @@ CREATE TABLE graph_templates_graph (
 -- Dumping data for table `graph_templates_graph`
 --
 
-INSERT INTO graph_templates_graph VALUES (2,0,0,2,'',1,'on','|host_description| - Traffic','','',120,'',500,'',100,'',0,'','bits per second','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (3,0,0,3,'',1,'on','|host_description| - Hard Drive Space','','',120,'',500,'',100,'',0,'','bytes','','on','','on','',2,'','','','','','on','','on','',1024,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (4,0,0,4,'',1,'','|host_description| - CPU Usage','','',120,'',500,'',100,'',0,'','percent','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (5,0,0,5,'',1,'on','|host_description| - Wireless Levels','','',120,'',500,'',100,'',0,'','percent','','on','','','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (6,0,0,6,'',1,'on','|host_description| - Wireless Transmissions','','',120,'',500,'',100,'',0,'','transmissions','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (7,0,0,7,'',1,'','|host_description| - Ping Latency','','',120,'',500,'',100,'',0,'','milliseconds','','on','','on','',2,'','','','','','','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (8,0,0,8,'',1,'','|host_description| - Processes','','',120,'',500,'',100,'',0,'','processes','','on','','on','',2,'','','','','','','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (9,0,0,9,'',1,'','|host_description| - Load Average','','',120,'',500,'',100,'',0,'','processes in the run queue','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','0');
-INSERT INTO graph_templates_graph VALUES (10,0,0,10,'',1,'','|host_description| - Logged in Users','','',120,'',500,'',100,'',0,'','users','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (11,0,0,11,'',1,'','|host_description| - Load Average','','',120,'',500,'',100,'',0,'','processes in the run queue','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','0');
-INSERT INTO graph_templates_graph VALUES (12,0,0,12,'',1,'','|host_description| - Memory Usage','','',120,'',500,'',100,'',0,'','kilobytes','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (13,0,0,13,'',1,'','|host_description| - Memory Usage','','',120,'',500,'',100,'',0,'','bytes','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (14,0,0,14,'',1,'','|host_description| - File System Cache','','',120,'',500,'',100,'',0,'','cache checks/hits','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (15,0,0,15,'',1,'','|host_description| - CPU Utilization','','',120,'',500,'',100,'',0,'','percent','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (16,0,0,16,'',1,'','|host_description| - File System Activity','','',120,'',500,'',100,'',0,'','reads/writes per sec','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (17,0,0,17,'',1,'','|host_description| - Logged In Users','','',120,'',500,'',100,'',0,'','users','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (18,0,0,18,'',1,'','|host_description| - CPU Usage','','',120,'',500,'',100,'',0,'','percent','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (19,0,0,19,'',1,'on','|host_description| - Volume Information','','',120,'',500,'',100,'',0,'','bytes','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (20,0,0,20,'',1,'','|host_description| - Directory Information','','',120,'',500,'',100,'',0,'','directory entries','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (21,0,0,21,'',1,'on','|host_description| - Available Disk Space','','',120,'',500,'',100,'',0,'','bytes','','on','','on','',2,'','','','','','on','','on','',1024,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (22,0,0,22,'',1,'on','|host_description| - Errors/Discards','','',120,'',500,'',100,'',0,'','errors/sec','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (23,0,0,23,'',1,'on','|host_description| - Unicast Packets','','',120,'',500,'',100,'',0,'','packets/sec','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (24,0,0,24,'',1,'on','|host_description| - Non-Unicast Packets','','',120,'',500,'',100,'',0,'','packets/sec','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (25,0,0,25,'',1,'on','|host_description| - Traffic','','',120,'',500,'',100,'',0,'','bytes per second','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (34,0,0,26,'',1,'on','|host_description| - Available Disk Space','','',120,'',500,'',100,'',0,'','bytes','','on','','on','',2,'','','','','','on','','on','',1024,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (35,0,0,27,'',1,'on','|host_description| - CPU Utilization','','',120,'',500,'',100,'',0,'','percent','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (36,0,0,28,'',1,'','|host_description| - Logged in Users','','',120,'',500,'',100,'',0,'','users','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (37,0,0,29,'',1,'','|host_description| - Processes','','',120,'',500,'',100,'',0,'','processes','','on','','on','',2,'','','','','','','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (38,12,1,12,'0',1,'0','|host_description| - Memory Usage','Localhost - Memory Usage','0',120,'0',500,'0',100,'0',0,'0','kilobytes','','on','0','on','0',2,'0','','','','0','on','0','on','0',1000,'0','','0','on','0','','0','');
-INSERT INTO graph_templates_graph VALUES (39,9,2,9,'0',1,'0','|host_description| - Load Average','Localhost - Load Average','0',120,'0',500,'0',100,'0',0,'0','processes in the run queue','','on','0','on','0',2,'0','','','','0','on','0','on','0',1000,'0','','0','on','0','','0','0');
-INSERT INTO graph_templates_graph VALUES (40,10,3,10,'0',1,'0','|host_description| - Logged in Users','Localhost - Logged in Users','0',120,'0',500,'0',100,'0',0,'0','users','','on','0','on','0',2,'0','','','','0','on','0','on','0',1000,'0','','0','on','0','','0','');
-INSERT INTO graph_templates_graph VALUES (41,8,4,8,'0',1,'0','|host_description| - Processes','Localhost - Processes','0',120,'0',500,'0',100,'0',0,'0','processes','','on','0','on','0',2,'0','','','','0','','0','on','0',1000,'0','','0','on','0','','0','');
-INSERT INTO graph_templates_graph VALUES (42,0,0,30,'',1,'','|host_description| - Open Files','','',120,'',500,'',100,'',0,'','files','','on','','on','',2,'','','','','','','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (43,0,0,31,'',1,'on','|host_description| - Traffic','','',120,'',500,'',100,'',0,'','bits per second','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (44,0,0,32,'',1,'on','|host_description| - Traffic','','',120,'',500,'',100,'',0,'','bits per second','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (45,0,0,33,'',1,'on','|host_description| - Traffic','','',120,'',500,'',100,'',0,'','bytes per second','','on','','on','',2,'','','','','','on','','on','',1000,'0','','','on','','','','');
-INSERT INTO graph_templates_graph VALUES (47,0,0,34,'',1,'on','|host_description| -','','',120,'',500,'',100,'','','on',0,'on','','','on','',2,'','','','','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (2,0,0,2,'',1,'on','|host_description| - Traffic','','',120,'',500,'',100,'',0,'','bits per second','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (3,0,0,3,'',1,'on','|host_description| - Hard Drive Space','','',120,'',500,'',100,'',0,'','bytes','','on','','on','',2,'','','','','','on','','','','on','',1024,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (4,0,0,4,'',1,'','|host_description| - CPU Usage','','',120,'',500,'',100,'',0,'','percent','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (5,0,0,5,'',1,'on','|host_description| - Wireless Levels','','',120,'',500,'',100,'',0,'','percent','','on','','','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (6,0,0,6,'',1,'on','|host_description| - Wireless Transmissions','','',120,'',500,'',100,'',0,'','transmissions','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (7,0,0,7,'',1,'','|host_description| - Ping Latency','','',120,'',500,'',100,'',0,'','milliseconds','','on','','on','',2,'','','','','','','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (8,0,0,8,'',1,'','|host_description| - Processes','','',120,'',500,'',100,'',0,'','processes','','on','','on','',2,'','','','','','','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (9,0,0,9,'',1,'','|host_description| - Load Average','','',120,'',500,'',100,'',0,'','processes in the run queue','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','0');
+INSERT INTO graph_templates_graph VALUES (10,0,0,10,'',1,'','|host_description| - Logged in Users','','',120,'',500,'',100,'',0,'','users','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (11,0,0,11,'',1,'','|host_description| - Load Average','','',120,'',500,'',100,'',0,'','processes in the run queue','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','0');
+INSERT INTO graph_templates_graph VALUES (12,0,0,12,'',1,'','|host_description| - Memory Usage','','',120,'',500,'',100,'',0,'','kilobytes','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (13,0,0,13,'',1,'','|host_description| - Memory Usage','','',120,'',500,'',100,'',0,'','bytes','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (14,0,0,14,'',1,'','|host_description| - File System Cache','','',120,'',500,'',100,'',0,'','cache checks/hits','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (15,0,0,15,'',1,'','|host_description| - CPU Utilization','','',120,'',500,'',100,'',0,'','percent','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (16,0,0,16,'',1,'','|host_description| - File System Activity','','',120,'',500,'',100,'',0,'','reads/writes per sec','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (17,0,0,17,'',1,'','|host_description| - Logged In Users','','',120,'',500,'',100,'',0,'','users','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (18,0,0,18,'',1,'','|host_description| - CPU Usage','','',120,'',500,'',100,'',0,'','percent','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (19,0,0,19,'',1,'on','|host_description| - Volume Information','','',120,'',500,'',100,'',0,'','bytes','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (20,0,0,20,'',1,'','|host_description| - Directory Information','','',120,'',500,'',100,'',0,'','directory entries','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (21,0,0,21,'',1,'on','|host_description| - Available Disk Space','','',120,'',500,'',100,'',0,'','bytes','','on','','on','',2,'','','','','','on','','','','on','',1024,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (22,0,0,22,'',1,'on','|host_description| - Errors/Discards','','',120,'',500,'',100,'',0,'','errors/sec','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (23,0,0,23,'',1,'on','|host_description| - Unicast Packets','','',120,'',500,'',100,'',0,'','packets/sec','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (24,0,0,24,'',1,'on','|host_description| - Non-Unicast Packets','','',120,'',500,'',100,'',0,'','packets/sec','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (25,0,0,25,'',1,'on','|host_description| - Traffic','','',120,'',500,'',100,'',0,'','bytes per second','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (34,0,0,26,'',1,'on','|host_description| - Available Disk Space','','',120,'',500,'',100,'',0,'','bytes','','on','','on','',2,'','','','','','on','','','','on','',1024,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (35,0,0,27,'',1,'on','|host_description| - CPU Utilization','','',120,'',500,'',100,'',0,'','percent','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (36,0,0,28,'',1,'','|host_description| - Logged in Users','','',120,'',500,'',100,'',0,'','users','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (37,0,0,29,'',1,'','|host_description| - Processes','','',120,'',500,'',100,'',0,'','processes','','on','','on','',2,'','','','','','','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (38,12,1,12,'0',1,'0','|host_description| - Memory Usage','Localhost - Memory Usage','0',120,'0',500,'0',100,'0',0,'0','kilobytes','','on','0','on','0',2,'0','','','','0','on','','','0','on','0',1000,'0','','0','on','0','','0','');
+INSERT INTO graph_templates_graph VALUES (39,9,2,9,'0',1,'0','|host_description| - Load Average','Localhost - Load Average','0',120,'0',500,'0',100,'0',0,'0','processes in the run queue','','on','0','on','0',2,'0','','','','0','on','','','0','on','0',1000,'0','','0','on','0','','0','0');
+INSERT INTO graph_templates_graph VALUES (40,10,3,10,'0',1,'0','|host_description| - Logged in Users','Localhost - Logged in Users','0',120,'0',500,'0',100,'0',0,'0','users','','on','0','on','0',2,'0','','','','0','on','','','0','on','0',1000,'0','','0','on','0','','0','');
+INSERT INTO graph_templates_graph VALUES (41,8,4,8,'0',1,'0','|host_description| - Processes','Localhost - Processes','0',120,'0',500,'0',100,'0',0,'0','processes','','on','0','on','0',2,'0','','','','0','','','','0','on','0',1000,'0','','0','on','0','','0','');
+INSERT INTO graph_templates_graph VALUES (42,0,0,30,'',1,'','|host_description| - Open Files','','',120,'',500,'',100,'',0,'','files','','on','','on','',2,'','','','','','','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (43,0,0,31,'',1,'on','|host_description| - Traffic','','',120,'',500,'',100,'',0,'','bits per second','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (44,0,0,32,'',1,'on','|host_description| - Traffic','','',120,'',500,'',100,'',0,'','bits per second','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (45,0,0,33,'',1,'on','|host_description| - Traffic','','',120,'',500,'',100,'',0,'','bytes per second','','on','','on','',2,'','','','','','on','','','','on','',1000,'0','','','on','','','','');
+INSERT INTO graph_templates_graph VALUES (47,0,0,34,'',1,'on','|host_description| -','','',120,'',500,'',100,'','','on',0,'on','','','on','',2,'','','','','','','','','','on','',1000,'0','','','on','','','','');
 
 --
 -- Table structure for table `graph_templates_item`
