@@ -24,6 +24,7 @@ Cacti CHANGELOG
 -feature#0001162: WEB UI now accepts max_oids on SNMP bulkwalks
 -feature#0001123: Performance tweak by adding some indices
 -feature#0001122: Propagate Host Template changes to related hosts
+-feature#0000954: implement --alt-y-grid graph option 
 -feature: show basic rrdtool graph options on Graph Template Edit
 -feature: Add additional logging to Graph Xport
 -feature: Add rows dropdown to deivces, graphs and data sources
